--- a/src/Germadent.UI/Controls/AutoCompleteTextBox.xaml
+++ b/src/Germadent.UI/Controls/AutoCompleteTextBox.xaml
@@ -86,7 +86,7 @@
                     CornerRadius="5"
                     Padding="2">
                 <Grid>
-                    <ListBox x:Name="_selector"
+                    <ListBox x:Name="_suggestionsListBox"
                              ItemTemplate="{Binding ElementName=UserControl, Path=ItemTemplate, Mode=TwoWay}"
                              ItemTemplateSelector="{Binding ElementName=UserControl, Path=ItemTemplateSelector, Mode=TwoWay}"
                              Focusable="False"
