Добавил почти все контроллеры, перевел проект на неткоре

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/OrdersFilterWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/OrdersFilterWindow.xaml
@@ -81,9 +81,9 @@
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      ItemsSource="{Binding Materials}">
                 <ListBox.ItemTemplate>
-                    <DataTemplate DataType="{x:Type toothCard:MaterialViewModel}">
+                    <DataTemplate DataType="{x:Type toothCard:CheckableDictionaryItemViewModel}">
                         <Grid>
-                            <CheckBox Grid.Column="0" IsChecked="{Binding IsChecked}" Content="{Binding Item.MaterialName}" />
+                            <CheckBox Grid.Column="0" IsChecked="{Binding IsChecked}" Content="{Binding Item.Name}" />
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
