--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -48,32 +48,40 @@
                 </DataTemplate>
             </controls:AutoCompleteTextBox.ItemTemplate>
         </controls:AutoCompleteTextBox>
-        <Button Grid.Row="0" Grid.Column="2" Margin="6,0,0,0" Content="..."
+
+        <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="6,6,0,0">
+            <Button Content="Добавить в справочник"
+                    Command="{Binding AddCustomerCommand}"/>
+            <Button Content="Показать карточку" Margin="6,0,0,0"
+                    Command="{Binding ShowCustomerCartCommand}"/>
+        </StackPanel>
+
+        <Button Grid.Column="2" Grid.Row="0" Margin="6,0,0,0" Content="..."
                 Command="{Binding SelectCustomerCommand}"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="ФИО пациента" Margin="0,6,0,0"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО пациента" Margin="0,6,0,0"/>
 
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding Patient, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
+        <TextBlock Grid.Row="3" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
                    HorizontalAlignment="Right" Margin="0,6,0,0" />
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
+        <TextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding TechnicFullName, UpdateSourceTrigger=PropertyChanged}" />
-        <Button Grid.Row="2" Grid.Column="2" Margin="6,6,0,0" Content="..." />
+        <Button Grid.Row="3" Grid.Column="2" Margin="6,6,0,0" Content="..." />
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Номер тел. техника" VerticalAlignment="Center"
+        <TextBlock Grid.Row="4" Grid.Column="0" Text="Номер тел. техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
                    HorizontalAlignment="Right" Margin="0,6,0,0" />
-        <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="6,6,0,0" Width="150" HorizontalAlignment="Left"
+        <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Margin="6,6,0,0" Width="150" HorizontalAlignment="Left"
                  Text="{Binding TechnicPhone, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Text="Дата и время получения работы"/>
-        <DatePicker Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
+        <TextBlock Grid.Column="0" Grid.Row="5" Text="Дата и время получения работы"/>
+        <DatePicker Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
                     SelectedDate="{Binding Created}" SelectedDateFormat="Short" />
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="Комментарий по времени"/>
-        <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Grid.Column="0" Grid.Row="6" Text="Комментарий по времени"/>
+        <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="6" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </UserControl>
