--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/AddCustomerWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/AddCustomerWindow.xaml
@@ -38,8 +38,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Row="0" Grid.Column="0"  Style="{StaticResource InfoTextBorderStyle}">
-                <TextBlock Text="Наименование" Margin="0,0,0,0" VerticalAlignment="Center"/>
+            <Border Grid.Row="0" Grid.Column="0" Style="{StaticResource InfoTextBorderStyle}">
+                <TextBlock Text="Наименование" VerticalAlignment="Center"/>
             </Border>
             <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
                      Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
