--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/ResponsiblePersonCatalogWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/ResponsiblePersonCatalogWindow.xaml
@@ -8,7 +8,14 @@
         xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
         xmlns:helpers="clr-namespace:Germadent.UI.Helpers;assembly=Germadent.UI"
         mc:Ignorable="d"
-        Title="ResponsiblePersonCatalogWindow" Height="450" Width="800"
+        ShowInTaskbar="False"
+        WindowStartupLocation="CenterOwner"
+        Background="{x:Static SystemColors.ControlBrush}"
+        Title="Справочник докторов и техников" 
+        MinHeight="500"
+        Height="500" 
+        MinWidth="800"
+        Width="800"
         DataContextChanged="ResponsiblePersonCatalogWindow_OnDataContextChanged"
         d:DataContext="{d:DesignInstance Type={x:Type designMock:DesignMockResponsiblePersonsCatalogViewModel}, IsDesignTimeCreatable=True}">
     <Grid Margin="12">
