--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/CustomerUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/CustomerUserControl.xaml
@@ -1,20 +1,19 @@
-﻿<UserControl x:Class="Germadent.Rma.App.Views.UserControls.CustomerUserControl"
+﻿<UserControl x:Class="Germadent.Rma.App.Views.Wizard.CustomerUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Germadent.Rma.App.Views.UserControls"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
              mc:Ignorable="d" 
              d:DesignWidth="600"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockCustomerViewModel, IsDesignTimeCreatable=True}">
     <Grid Background="Transparent"
           ToolTip="{Binding Description}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="{Binding DisplayName}" Margin="3,0,0,0" HorizontalAlignment="Stretch"/>
-        <TextBlock Grid.Row="1" Margin="3,0,0,0" Text="{Binding Phone}" HorizontalAlignment="Stretch"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Column="0" Text="{Binding DisplayName}" Margin="3,0,0,0" HorizontalAlignment="Stretch"/>
+        <TextBlock Grid.Column="1" Margin="3,0,0,0" Text="{Binding Phone}" HorizontalAlignment="Stretch"/>
     </Grid>
 </UserControl>
